atualização <ul><li>

--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
             
             Sobre o que iremos falar durante o Webinar:</p>
             <ul>
-               <li><i class="fa fa-check" aria-hidden="true" ></i> Novas práticas para saúde do colaborador; </li>
-              <li><i class="fa fa-check" aria-hidden="true" ></i> Tecnologias para gerenciamento de benefícios de saúde; </li>
-              <li><i class="fa fa-check" aria-hidden="true" ></i> Porque precisamos falar de saúde mental com colaboradores;</li>
-              <li><i class="fa fa-check" aria-hidden="true" ></i> Exercícios para fazer em casa (Yoga, Meditação, Alongamentos);</li>
+               <li><i class="fa fa-check" aria-hidden="true"></i> Novas práticas para saúde do colaborador; </li>
+            <li><i class="fa fa-check" aria-hidden="true"></i> Inovação no gerenciamento de pessoas;
+            </li>
+            <li><i class="fa fa-check" aria-hidden="true"></i> Porque precisamos falar de saúde mental com
+              colaboradores;</li>
             </ul>       
          </div>
       </div>
