--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
   </div>
   </div>
-  <footer>
+  <!--<footer>
     <div class="row" id='footer'>
       <div class="col-md-3">
         <address>
@@ -118,7 +118,7 @@
         <img src="assets/images/calmAI-logo.png" alt="Logo" class="img-fluid">
       </div>      
     </div>
-  </footer>  
+  </footer>-->
     <script src="https://www.calmai.ml/assets/js/script.js"></script>
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
