--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 <!-- fim container -->
   </div>
-  <!--<footer>
+  <footer>
     <div class="row" id='footer'>
       <div class="col-md-3">
         <address>
@@ -172,7 +172,7 @@
         <img src="assets/images/calmAI-logo.png" alt="Logo" class="img-fluid">
       </div>      
     </div>
-  </footer>-->
+  </footer>
     <script src="https://www.calmai.ml/assets/js/script.js"></script>
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
