--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
   <div class="row">
     <div class="navbar col-12">
       <img src="assets/images/Frame.png" width="174" height="68" alt="Logo">
+         <div class="navbarRedes">
+        <a href="https://www.linkedin.com/company/calmai-rh/" target="_blank" class=""><img src="/assets/images/logo-linke.png" alt="" srcset=""></a>
+        <a href="https://www.instagram.com/calmai.rh/?hl=pt-br" target="_blank" ><img src="/assets/images/logo-insta (1).png" alt="" srcset=""></a>
+        <a href="https://www.facebook.com/calmairh" target="_blank" ><img src="/assets/images/logo-face.png" alt="" srcset=""></a>
+       
+      </div>
     </div>
     <div class="col">      
     </div>
