--- a/index.html
+++ b/index.html
@@ -84,10 +84,12 @@
       <div class="col-lg-6 col-md-12 col-sm-12" id="colunaDois">
         <div class="row" id="rowCronometro">
           <div class="col-12 d-flex justify-content-center">
-            <div class="cronometro">
-              <h4>Data do Evento: <strong>Dia 9 de Julho, as 19 horas </strong></h4>
-              <h5>CONTAGEM REGRESSIVA</h5>
-              <p id="demo"></p>
+            <div class="row">
+              <div class="cronometro">
+                <h4>Data do Evento: <strong>Dia 9 de Julho, as 19 horas </strong></h4>
+                <h5>CONTAGEM REGRESSIVA</h5>
+                <p id="demo"></p>
+              </div>
             </div>
           </div>
         </div>
