--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="description" content="Você quer aprender mais sobre inovação com inteligência artificial, saúde e bem-estar, não perca tempo e venha fazer parte do CalmAI."/>
     <meta name="keywords" content="Webinar | Gerenciamento de pessoas"/>
-    <meta name="title" content="Webinar | Gerenciamento de Pessoas: inovação,saúde e bem-estar em pandemia."/>
+    <meta name="title" content="Webinar | Gerenciamento de Pessoas: inovação, saúde e bem-estar em pandemia."/>
     <meta name="author" content="CalmAI"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="shortcut icon" href="./assets/images/icone4.png">
-    <title>CalmAI</title>
+    <title>CalmAI - Líder de inteligência em saúde</title>
     <!--MailChimp-->
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2c0ed8a2424e8ad525143fc28/22615ade34f34dc3d097aec62.js");</script>
     <!-- Facebook Pixel Code -->
