--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="col-12 d-flex justify-content-center">
             <div class="row">
               <div class="cronometro">
-                <h4>Data do Evento: <strong>Dia 9 de Julho, as 19 horas </strong></h4>
+                <h4>Data: <strong>Dia 9 de Julho, às 19 horas </strong></h4>
                 <h5>CONTAGEM REGRESSIVA</h5>
                 <p id="demo"></p>
               </div>
