--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
           <div class="col-12 d-flex justify-content-center">
             <div class="row">
               <div class="cronometro">
-                <h4>Data: <strong>Dia 9 de Julho, às 19 horas </strong></h4>
-                <h5>CONTAGEM REGRESSIVA</h5>
+                <h4>Data: <strong>9 de Julho, às 19 horas </strong></h4>
+                <h3 style="font-weight: bold">CONTAGEM REGRESSIVA</h3>
                 <p id="demo"></p>
               </div>
             </div>
