--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="row">
               <div class="cronometro">
                 <h3>Data: <strong>9 de Julho, às 19 horas </strong></h3>
-                <h6 style="font-weight: bold">CONTAGEM REGRESSIVA</h6>
+                <h5 style="font-weight: bold; margin-top: 5px">CONTAGEM REGRESSIVA</h5>
                 <p id="demo"></p>
               </div>
             </div>
