--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body class="fundo">
       <!-- Barra de navegação - navbar -->
-  <div class="row">
+  <div class="navAj row">
     <div class="navbar col-12">
       <img src="assets/images/Frame.png" width="174" height="68" alt="Logo">
          <div class="navbarRedes">
