--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <div class="cronometro">
                 <h4>Data: <strong>9 de Julho, às 19 horas </strong></h4>
                 <h6 style="font-weight: bold; margin-top: 25px">CONTAGEM REGRESSIVA</h6>
-                <p id="demo"></p>
+                <!--<p id="demo"></p>-->
               </div>
             </div>
           </div>
