--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    Preparamos pra você um webinar com um maravilhoso e você não pode ficar fora dessa. Venha participar da live com a gente, vem ! 
+                    Preparamos pra você um webinar com um maravilhoso conteúdo e você não pode ficar fora dessa. Venha participar da live com a gente, vem ! 
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="scrollToForm()">Close</button>
