--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </div>
   </footer>
     <!-- Modal Popup de saída -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -186,7 +186,7 @@
                     Preparamos pra você um webinar com um maravilhoso conteúdo e você não pode ficar fora dessa. Venha participar da live com a gente, vem ! 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="scrollToForm()">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="scrollToForm()">Fechar</button>
 
                 </div>
             </div>
