Teste button Popup

--- a/index.html
+++ b/index.html
@@ -172,22 +172,21 @@
     </div>
   </footer>
     <!-- Modal Popup de saída -->
-    <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel"
         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel"> <strong>ESPERE</strong> !! </h5>
+                    <h5 class="modal-title" id="ModalLabel"> <strong>ESPERE</strong> !! </h5>
                     <button type="button" id="close" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    Preparamos pra você um webinar com um maravilhoso conteúdo e você não pode ficar fora dessa. Venha participar da live com a gente, vem ! 
+                    Preparamos pra você um webinar com um maravilhoso conteúdo e você não pode ficar fora dessa. <br>Venha participar da live com a gente, vem ! 
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="scrollToForm()">Fechar</button>
-
                 </div>
             </div>
         </div>
