Teste Link Form

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="row" id="formulario">
           <div class="text4">
-            <h3 class="texto4">Ao vivo, online e gratuito!</h3>
+            <a id="linkar"><h3 class="texto4">Ao vivo, online e gratuito!</h3></a>
           </div>
           <div class="col-12">
             <div id="box_form">
@@ -186,7 +186,7 @@
                     Preparamos pra você um webinar com um maravilhoso conteúdo e você não pode ficar fora dessa. <br>Venha participar da live com a gente, vem ! 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="scrollToForm()">Fechar</button>
+                    <a href="#linkar"><button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="scrollToForm()">Inscreva-se</button></a>
                 </div>
             </div>
         </div>
