--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="row" id="formulario">
           <div class="text4">
-            <a id="linkar"><h3 class="texto4">Ao vivo, online e gratuito!</h3></a>
+            <h3 class="texto4">Ao vivo, online e gratuito!</h3>
           </div>
           <div class="col-12">
             <div id="box_form">
@@ -177,8 +177,8 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="ModalLabel"> <strong>ESPERE</strong> !! </h5>
-                    <button type="button" id="close" class="close" data-dismiss="modal" aria-label="Close">
+                    <h5 class="modal-title" id="ModalLabel" style="text-align: center;"> <strong>ESPERE !!</strong></h5>   
+                    <button type="button" id="close" class="close" data-dismiss="modal" aria-label="Close"></button>                 
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -186,7 +186,7 @@
                     Preparamos pra você um webinar com um maravilhoso conteúdo e você não pode ficar fora dessa. <br>Venha participar da live com a gente, vem ! 
                 </div>
                 <div class="modal-footer">
-                    <a href="#linkar"><button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="scrollToForm()">Inscreva-se</button></a>
+                   <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="scrollToForm()">Inscreva-se </button>
                 </div>
             </div>
         </div>
