--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     Preparamos pra você um webinar com um maravilhoso conteúdo e você não pode ficar fora dessa. <br>Venha participar da live com a gente, vem ! 
                 </div>
                 <div class="modal-footer">
-                   <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="scrollToForm()">Inscreva-se </button>
+                   <a href="#texto4"><button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="scrollToForm()">Inscreva-se </button></a>
                 </div>
             </div>
         </div>
