--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="row" id="formulario">
           <div class="text4">
-            <h3 class="texto4">Ao vivo, online e gratuito!</h3>
+            <h3 id ="texto4" class="texto4">Ao vivo, online e gratuito!</h3>
           </div>
           <div class="col-12">
             <div id="box_form">
