--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="row">
               <div class="cronometro">
                 <h4>Data: <strong>9 de Julho, às 19 horas </strong></h4>
-                <h6 style="font-weight: bold; margin-top: 25px">CONTAGEM REGRESSIVA</h6>
+                <h6 style="font-weight: bold;">CONTAGEM REGRESSIVA</h6>
                 <p id="demo"></p>
               </div>
             </div>
