--- a/index.html
+++ b/index.html
@@ -135,20 +135,20 @@
       <div class="convidados col-12">
         <div class="convidado1">
           <h2 class="tituloConvidada">MEDIADORA</h2>
-          <img src="assets/images/Maria paula.png" alt="" srcset="">
-          <p class="nomeConvidado">Maria Paula</p>
-          <p class="descricao">Jornalista, </br>mãe e apresentadora.</p>
+          <img class='img1' src="assets/images/Maria paula.png" alt="" srcset="">
+          <p class="nomeConvidado1">Maria Paula</p>
+          <p class="descricao1">Jornalista, </br>mãe e apresentadora.</p>
         </div>
          <div class="convidado2">
           <h5 id="titleConvidados">Convidados</h5>
-          <img src="assets/images/Talita.jpg.jpeg" alt="" sizes="" srcset="">
-          <p class="nomeConvidado">Talita Tiemi</p>            
-          <p class="descricao">Da Up Capital Humano, instagrammer, psicóloga e gestora de pessoas.</p>            
+          <img class='img2' src="assets/images/Talita.jpg.jpeg" alt="" sizes="" srcset="">
+          <p class="nomeConvidado2">Talita Tiemi</p>            
+          <p class="descricao2">Da Up Capital Humano, instagrammer, psicóloga e gestora de pessoas.</p>            
         </div>
         <div class="convidado3">            
-          <img src="assets/images/73271705_578008196340333_3303975377583815677_n.jpg" srcset="">
-          <p class="nomeConvidado">João Fouad</p>
-          <p class="descricao">Especialista em treinamento e desenvolvimento em Gestão de Pessoas.</p>
+          <img class='img3' src="assets/images/73271705_578008196340333_3303975377583815677_n.jpg" srcset="">
+          <p class="nomeConvidado3">João Fouad</p>
+          <p class="descricao3">Especialista em treinamento e desenvolvimento em Gestão de Pessoas.</p>
         </div>
       </div>
     </div>
