--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <div class="navbar col-12">
       <img src="assets/images/Frame.png" width="174" height="68" alt="Logo">
       <div class="navbarRedes">
-        <a href="https://www.linkedin.com/company/calmai-rh/" target="_blank" class=""><img src="/assets/images/logo-linke.png" alt="" srcset=""></a>
-        <a href="https://www.instagram.com/calmai.rh/?hl=pt-br" target="_blank" ><img src="/assets/images/logo-insta (1).png" alt="" srcset=""></a>
-        <a href="https://www.facebook.com/calmairh" target="_blank" ><img src="/assets/images/logo-face.png" alt="" srcset=""></a>       
+        <a href="https://www.linkedin.com/company/calmai-rh/" target="_blank" class=""><img src="/assets/images/logo-linke.png" alt="LinkedIn" ></a>
+        <a href="https://www.instagram.com/calmai.rh/?hl=pt-br" target="_blank" ><img src="/assets/images/logo-insta (1).png" alt="Instragram" ></a>
+        <a href="https://www.facebook.com/calmairh" target="_blank" ><img src="/assets/images/logo-face.png" alt="Facebook" ></a>       
       </div>
     </div>
     <div class="col">      
@@ -135,18 +135,18 @@
       <div class="convidados col-12">
         <div class="convidado1">
           <h2 class="tituloConvidada">MEDIADORA</h2>
-          <img src="assets/images/Maria paula.png" alt="" srcset="">
+          <img src="assets/images/Maria paula.png" alt="Convidado 1" >
           <p class="nomeConvidado">Maria Paula</p>
           <p class="descricao">Jornalista, </br>mãe e apresentadora.</p>
         </div>
          <div class="convidado2">
           <h5 id="titleConvidados">Convidados</h5>
-          <img src="assets/images/Talita.jpg.jpeg" alt="" sizes="" srcset="">
+          <img src="assets/images/Talita.jpg.jpeg" alt="Convidado 2">
           <p class="nomeConvidado">Talita Tiemi</p>            
           <p class="descricao">Da Up Capital Humano, instagrammer, psicóloga e gestora de pessoas.</p>            
         </div>
         <div class="convidado3">            
-          <img src="assets/images/73271705_578008196340333_3303975377583815677_n.jpg" srcset="">
+          <img src="assets/images/73271705_578008196340333_3303975377583815677_n.jpg" alt="Convidado 3 ">
           <p class="nomeConvidado">João Fouad</p>
           <p class="descricao">Especialista em treinamento e desenvolvimento em Gestão de Pessoas.</p>
         </div>
