--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <div class="convidados col-12">
         <div class="convidado1">
           <h2 class="tituloConvidada">MEDIADORA</h2>
-          <img src="assets/images/Maria paula.png" alt="Convidado 1" >
+          <img src="assets/images/Conv1.webp" alt="Convidado 1" >
           <p class="nomeConvidado">Maria Paula</p>
           <p class="descricao">Jornalista, </br>mãe e apresentadora.</p>
         </div>
