--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <div class="navbar col-12">
       <img src="assets/images/Frame.png" width="174" height="68" alt="Logo">
       <div class="navbarRedes">
-        <a href="https://www.linkedin.com/company/calmai-rh/" target="_blank" class=""><img src="/assets/images/logo-linke.png" alt="LinkedIn" ></a>
-        <a href="https://www.instagram.com/calmai.rh/?hl=pt-br" target="_blank" ><img src="/assets/images/logo-insta (1).png" alt="Instragram" ></a>
-        <a href="https://www.facebook.com/calmairh" target="_blank" ><img src="/assets/images/logo-face.png" alt="Facebook" ></a>       
+        <a href="https://www.linkedin.com/company/calmai-rh/" rel="noopener" class=""><img src="/assets/images/logo-linke.png" alt="LinkedIn" ></a>
+        <a href="https://www.instagram.com/calmai.rh/?hl=pt-br" rel="noopener" ><img src="/assets/images/logo-insta (1).png" alt="Instragram" ></a>
+        <a href="https://www.facebook.com/calmairh" rel="noopener" ><img src="/assets/images/logo-face.png" alt="Facebook" ></a>       
       </div>
     </div>
     <div class="col">      
@@ -183,7 +183,10 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    Preparamos pra você um webinar com um maravilhoso conteúdo e você não pode ficar fora dessa. <br>Venha participar da live com a gente, vem ! 
+                    Preparamos pra você um webinar com um maravilhoso conteúdo e você não pode ficar fora dessa. 
+                    <br>
+                    <br>
+                    Venha participar da live com a gente, vem ! 
                 </div>
                 <div class="modal-footer">
                    <a href="#texto4"><button type="button" class="btn btn-secondary" data-dismiss="modal">Inscreva-se </button></a>
