--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    Preparamos pra você um webinar com um maravilhoso conteúdo e você não pode ficar fora dessa. 
+                    Preparamos pra <strong>você</strong>, um webinar com um maravilhoso conteúdo e <strong>você</strong> não pode ficar fora dessa. 
                     <br>
                     <br>
                     Venha participar da live com a gente, vem ! 
