--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     Preparamos pra <strong>você</strong>, um webinar com um maravilhoso conteúdo e <strong>você</strong> não pode ficar fora dessa. 
                     <br>
                     <br>
-                    Venha participar da live com a gente, vem ! 
+                    Venha participar da live com a gente, <strong>vem</strong>! 
                 </div>
                 <div class="modal-footer">
                    <a href="#texto4"><button type="button" class="btn btn-secondary" data-dismiss="modal">Inscreva-se </button></a>
